# anonymous

./: README.md
Magicsphere-cmake/: compile.sh
Magicsphere-cmake/Baseline/: setup.py  setup_test.py
Magicsphere-cmake/Baseline/GNNAdvisor/: GNNAdvisor_kernel.cu
Magicsphere-cmake/Baseline/GNNAdvisor_v2/: GNNAdvisor.cpp  GNNAdvisor_kernel.cu
Magicsphere-cmake/Baseline/MBaseline_cmake.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Magicsphere-cmake/Baseline/MBaseline_cmake_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Magicsphere-cmake/Baseline/TCGNN/: TCGNN.cpp
Magicsphere-cmake/Baseline/TCGNN_v2/: TCGNN_kernel.cu
Magicsphere-cmake/Baseline/cuSPARSE/: spmm_csr.cpp  spmm_csr_kernel.cu
Magicsphere-cmake/Baseline_kernel/: setup.py  setup_test.py
Magicsphere-cmake/Baseline_kernel/GNNAdvisor/: GNNAdvisor.cpp  GNNAdvisor_kernel.cu
Magicsphere-cmake/Baseline_kernel/GNNAdvisor_v2/: GNNAdvisor_kernel.cu
Magicsphere-cmake/Baseline_kernel/GNNAdvisor_v2 copy/: GNNAdvisor.cpp  GNNAdvisor_kernel.cu
Magicsphere-cmake/Baseline_kernel/MBaseline.egg-info/: SOURCES.txt  top_level.txt
Magicsphere-cmake/Baseline_kernel/MBaseline_kernel.egg-info/: SOURCES.txt  top_level.txt
Magicsphere-cmake/Baseline_kernel/MBaseline_kernel_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Magicsphere-cmake/Baseline_kernel/TCGNN/: TCGNN.cpp  TCGNN_kernel.cu
Magicsphere-cmake/Baseline_kernel/cuSPARSE/: spmm_csr.cpp  spmm_csr_kernel.cu
Magicsphere-cmake/Magicsphere/: setup.py
Magicsphere-cmake/Magicsphere/Block/: CMakeLists.txt  example.cpp  test.py
Magicsphere-cmake/Magicsphere/Block/include/: example.h
Magicsphere-cmake/Magicsphere/GAT/: CMakeLists.txt
Magicsphere-cmake/Magicsphere/GAT/mGAT.egg-info/: SOURCES.txt  top_level.txt
Magicsphere-cmake/Magicsphere/GAT/src/: mGAT.cpp
Magicsphere-cmake/Magicsphere/GAT/test/: test_a0a1_feature.py  test_sddmm.py
Magicsphere-cmake/Magicsphere/GAT/test/mgcn16/: test_mgat.py
Magicsphere-cmake/Magicsphere/GAT/test/mgcn32/: mdataset_fp32.py  test_mgat.py
Magicsphere-cmake/Magicsphere/GCN/: CMakeLists.txt
Magicsphere-cmake/Magicsphere/GCN/src/: mGCN.cpp
Magicsphere-cmake/Magicsphere/GCN/test/: mGCN_fp16.py  mGCN_tf32.py
Magicsphere-cmake/Magicsphere/GCN/test/mgcn/: mdataset_fp16.py  test_mgcn322.py
Magicsphere-cmake/Magicsphere/LRabbitAll2/: CMakeLists.txt  reorder.cpp  test
Magicsphere-cmake/Magicsphere/Magicsphere.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Magicsphere-cmake/Magicsphere/Magicsphere1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Magicsphere-cmake/Magicsphere/Magicsphere_cmake.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Magicsphere-cmake/Magicsphere/Magicsphere_cmake_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Magicsphere-cmake/Magicsphere/benchmark/: setup.py
Magicsphere-cmake/Magicsphere/benchmark/GAT-benchmark/: CMakeLists.txt
Magicsphere-cmake/Magicsphere/benchmark/GAT-benchmark/mGAT.egg-info/: PKG-INFO
Magicsphere-cmake/Magicsphere/benchmark/GAT-benchmark/src/: benchmark.cpp
Magicsphere-cmake/Magicsphere/benchmark/GCN-benchmark/: CMakeLists.txt
Magicsphere-cmake/Magicsphere/benchmark/GCN-benchmark/Magicsphere2.egg-info/: SOURCES.txt  top_level.txt
Magicsphere-cmake/Magicsphere/benchmark/GCN-benchmark/src/: benchmark.cpp
Magicsphere-cmake/Magicsphere/benchmark/Magicsphere2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Magicsphere-cmake/Magicsphere/benchmark/Magicsphere_kernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Magicsphere-cmake/eva100/end2end/agnn_no_pre/: eva_agnn_100.py
Magicsphere-cmake/eva100/end2end/gat_no_pre/: eva_gat_100.py  eva_gat_plot.py
Magicsphere-cmake/eva100/kernel/gat/: mtest_gat.py  (+4 more)
Magicsphere-cmake/eva100/others/: eva_fig10.py  eva_table3.py  mdataset.py
(+52 files in other folders)
