

file(GLOB_RECURSE CURRENT_HEADERS  sddmm_utils/*.h)
# file(GLOB CURRENT_SOURCES  src/*.cpp src/*.cu)
file(GLOB CURRENT_SOURCES  src/mGATKernel.cu)

add_library(MGAT STATIC ${CURRENT_HEADERS} ${CURRENT_SOURCES})
target_link_libraries(MGAT "${TORCH_LIBRARIES}" ${CUDA_LIBRARIES})

install(TARGETS MGAT ARCHIVE DESTINATION "GAT/lib")
install(FILES ${CURRENT_HEADERS} DESTINATION "GAT/include")
set_property(TARGET MGAT PROPERTY CXX_STANDARD 17)