

file(GLOB_RECURSE CURRENT_HEADERS  spmm_utils/*.h)
# file(GLOB CURRENT_SOURCES  src/*.cpp src/*.cu)
file(GLOB CURRENT_SOURCES  src/mGCNKernel.cu)

add_library(MGCN STATIC ${CURRENT_HEADERS} ${CURRENT_SOURCES})
target_link_libraries(MGCN "${TORCH_LIBRARIES}" ${CUDA_LIBRARIES})

install(TARGETS MGCN ARCHIVE DESTINATION "GCN/lib")
install(FILES ${CURRENT_HEADERS} DESTINATION "GCN/include")
set_property(TARGET MGCN PROPERTY CXX_STANDARD 17)